--- a/style/index.css
+++ b/style/index.css
@@ -29,7 +29,7 @@ body {
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-start;
-  margin: 8% 0% 0% 0%;
+  margin: 8% 20% 10% 0%;
 }
 
 #about h2 {
@@ -56,6 +56,7 @@ body {
 }
 
 #about img {
+  text-align: center;
   margin: -5% 0% 0% 0%;
 }
 
@@ -70,6 +71,8 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size: 1.5rem;
+  font-weight: bolder;
 }
 
 #images {
@@ -81,6 +84,8 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size: 1.5rem;
+  font-weight: bolder;
 }
 
 footer h3 {
