--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,14 @@ a {
 }
 
 header {
+  border: 0.2rem solid #ab47bc;
   background-color: darkslategrey;
+  
+}
+
+body {
+  font-size: 1rem;
+  text-align: center;
 }
 
 .one {
@@ -18,11 +25,12 @@ header {
   align-items: flex-start;
 }
 
+/* Right hand side pargraph + header for index.html */
 #about {
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-start;
-  margin: 8% 0% 0% 0%;
+  margin: 8% 20% 10% 0%;
 }
 
 #about h2 {
@@ -49,9 +57,12 @@ header {
 }
 
 #about img {
+  text-align: center;
   margin: -5% 0% 0% 0%;
 }
+/* Right hand side pargraph + header for index.html */
 
+/* Flex images on index.html and paragraph descriptions */
 .images {
   display: flex;
   flex-direction: row;
@@ -63,6 +74,8 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size: 1.5rem;
+  font-weight: bolder;
 }
 
 #images {
@@ -74,17 +87,38 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size: 1.5rem;
+  font-weight: bolder;
 }
+/* Flex images on index.html and paragraph descriptions */
 
+
+/* footer stuff for index.html */
 footer h3 {
   text-align: center;
+}
+
+#contactForm{
+  display: flex;
+  grid-row: auto;
+  justify-content: center;
+  order: -1;
+}
+
+#oneContact{
+  margin: 2% 2% 2% 2%;
+}
+#twoContact{
+  margin: 2% 2% 2% 2%;
 }
 
 #contactMe {
   display: flex;
   justify-content: center;
 }
-
+.contactP{
+  margin: 2% 5% 2% 2%;
+}
 footer h2 {
   text-align: center;
 }
@@ -96,7 +130,14 @@ footer h2 {
 
 .bgColor {
   background-color: darkslategrey;
+  border: 0.2rem solid #ab47bc;
+  padding: 8px;
 }
+
+/* about.html css  */
+
+
+/* footer stuff for index.html */
 
 .aboutMe {
   text-align: center;
@@ -118,11 +159,20 @@ footer h2 {
   font-size: 1.5rem;
 }
 
+/* container for about.html */
+
 #Container {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
 }
+
+/* container for about.html */
+
+/* about.html css  */
+
+/* Projects.html css */
+
 
 #imgContainer {
   display: flex;
@@ -164,7 +214,9 @@ footer h2 {
   background-color: violet;
 }
 
-@media all and (max-width: 650px) {
+/* Projects.html css */
+
+@media all and (max-width: 800px) {
   body {
     font-size: 1.5rem;
   }
@@ -175,8 +227,41 @@ footer h2 {
     font-size: 3rem;
   }
   footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+      flex-shrink: 0;
+      bottom: 0;
+      width: 100%;
+      padding: 3%;
+      margin-top: 4%;
+      display: flex;
+      justify-content: center;
+
+
   }
+
+
+}
+
+@media all and (max-width: 500px) {
+  body {
+    font-size: 1.5rem;
+  }
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 3rem;
+  }
+  footer {
+      flex-shrink: 0;
+      bottom: 0;
+      width: 100%;
+      padding: 3%;
+      margin-top: 4%;
+      display: flex;
+      justify-content: center;
+
+
+  }
+
+
 }
