--- a/style/index.css
+++ b/style/index.css
@@ -234,8 +234,6 @@ footer h2 {
       margin-top: 4%;
       display: flex;
       justify-content: center;
-
-
   }
 
 
@@ -251,6 +249,61 @@ footer h2 {
   h2 {
     font-size: 3rem;
   }
+  .one{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+
+  header{
+    margin: 0% 0% 90% 0%;
+  }
+  #about{
+    display: flex;
+    flex-direction: column; 
+  }
+
+  #about img{
+    margin: -320% 0% 0% 0%;
+    padding: 5%;
+  }
+
+  .oneP{
+    margin: -90% 0% 0% 5%;
+  }
+  .twoP{
+    margin: -90% -95% 0% 0%;
+  }
+  .threeP{
+    margin: 5% 20% 5% 5%;
+  }
+  .fourP{
+    margin: 5% 5% 0% -15%;
+  }
+
+  #oneP{
+    margin: -90% 0% 0% 5%;
+  }
+  #twoP{
+    margin: -90% -95% 0% 0%;
+  }
+  #threeP{
+    margin: 5% 20% 5% 5%;
+  }
+  #fourP{
+    margin: 5% 5% 0% -15%;
+  }
+  #about p{
+    margin: -50% 0% 0% 50%;
+  }
+  #about h2{
+     margin: 0% 0% 0% 50%;
+  }
+  #about button{
+     margin: 0% 0% 50% 60%;
+  }
   footer {
       flex-shrink: 0;
       bottom: 0;
@@ -259,9 +312,21 @@ footer h2 {
       margin-top: 4%;
       display: flex;
       justify-content: center;
-
-
   }
+
+
+  .images {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  flex-wrap: wrap;
+  margin: 180% 0% 0% 0%
+
+}
+
+#images{
+  flex-wrap: wrap;
+}
 
 
 }
