--- a/style/index.css
+++ b/style/index.css
@@ -235,6 +235,71 @@ footer h2 {
       display: flex;
       justify-content: center;
   }
+  .one{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+   header{
+    margin: 0% 0% 60% 0%;
+  }
+
+  #about img{
+    margin: -70% 0% -25% 20%;
+  }
+  #about p{
+    margin: 0% 0% 0% 0%;
+  }
+    .images {
+  display: flex;
+  margin: auto;
+  flex-wrap: wrap;
+  margin: 0% 25% 0% 0%
+
+}
+
+#images{
+   display: flex;
+  margin: auto;
+  flex-wrap: wrap;
+  margin: 0% 25% 0% 0%
+}
+
+#images{
+  flex-wrap: wrap;
+}
+.oneP{
+  margin: -55% 0% 0% 4%;
+}
+.twoP{
+  margin: -55% 25% 0% 0%;
+
+}
+
+.threeP{
+  margin: 2% 0% 5% -150%;
+}
+
+.fourP{
+  margin: 2% 15% 0% 0%;
+}  
+
+#oneP{
+  margin: -55% 0% 0% 4%;
+}
+#twoP{
+  margin: -55% 25% 0% 0%;
+
+}
+
+#threeP{
+  margin: 2% 0% 0% -150%;
+}
+
+#fourP{
+  margin: 2% 15% 0% 0%;
+} 
 
 
 }
